
add_executable(cfile_binary_file cfile_binary_file.cpp)
add_executable(test_c_fgetpos test_c_fgetpos.cpp)
add_executable(test_c_stand_io test_c_stand_io.cpp)
add_executable(test_ifstream test_ifstream.cpp)
add_executable(test_seek_tell test_seek_tell.cpp)
add_executable(test_stox test_stox.cpp)
add_executable(test_cpp_eof test_cpp_eof.cpp)

